@@ -117,8 +117,6 @@ Nondetfunction eval_static_operation (op: operation) (vl: list approx) :=
   | Osubf, F n1 :: F n2 :: nil => F(Float.sub n1 n2)
   | Omulf, F n1 :: F n2 :: nil => F(Float.mul n1 n2)
   | Odivf, F n1 :: F n2 :: nil => F(Float.div n1 n2)
-  | Omuladdf, F n1 :: F n2 :: F n3 :: nil => F(Float.add (Float.mul n1 n2) n3)
-  | Omulsubf, F n1 :: F n2 :: F n3 :: nil => F(Float.sub (Float.mul n1 n2) n3)
   | Osingleoffloat, F n1 :: nil => F(Float.singleoffloat n1)
   | Ointoffloat, F n1 :: nil => eval_static_intoffloat n1
   | Ofloatofwords, I n1 :: I n2 :: nil => F(Float.from_words n1 n2)
